tests/compile_fail/non_ident_extra_pattern.stderr
error: entry pattern incompatible with arm pattern
 --> tests/compile_fail/non_ident_extra_pattern.rs:6:15
  |
6 |             { 1 }(val) => val,
  |               ^
